# ncbi-amrfinderplus-rs

./: Cargo.toml  LICENSE  README.md  build.rs
src/: alignment.rs  amr_reportcli.rs  columns.rs  dna_mutation.rs  fasta_utils.rs  gff.rs  graph.rs  lib.rs  main.rs  pipeline.rs  report.rs  search.rs  seq.rs  tsv.rs  update.rs
tests/: integration.rs
tests/golden/: dom  expected_output  hmmsearch  test_prot.expected
