[package]
name = "amrfinder-rs"
version = "0.1.0"
edition = "2021"
description = "Rust implementation of NCBI AMRFinderPlus — antimicrobial resistance gene detection"
license-file = "LICENSE"
repository = "https://github.com/henriksson-lab/ncbi-amrfinderplus-rs"
readme = "README.md"
keywords = ["bioinformatics", "amr", "antimicrobial-resistance", "blast", "genomics"]
categories = ["science", "command-line-utilities"]
exclude = ["amr", "amrfinder_db", "target", "CLAUDE.md"]

[[bin]]
name = "amrfinder"
path = "src/main.rs"

[lib]
name = "amrfinder"
path = "src/lib.rs"

[dependencies]
blast-rs = "0.5"
hmmer-pure-rs = "0.4"
ureq = "3"
clap = { version = "4", features = ["derive"] }
tempfile = "3"
anyhow = "1"
